@@ -3304,6 +3304,8 @@ genCall (iCode * ic)
 
   dtype = operandType (IC_LEFT (ic));
   etype = getSpec (dtype);
+  const bool bigreturn = IS_STRUCT (dtype->next);
+
   /* if send set is not empty then assign */
   if (_G.sendSet)
     {
@@ -3331,6 +3333,36 @@ genCall (iCode * ic)
   /* if caller saves & we have not saved then */
   if (!ic->regsSaved)
     saveRegisters (ic);
+
+  // Pass pointer for storing return value
+  if (bigreturn)
+    {
+      wassert (IC_RESULT (ic));
+      symbol *sym = OP_SYMBOL (IC_RESULT (ic));
+      wassert (sym);
+
+      if (sym->onStack)
+        {
+          emitcode ("mov", "a,%s", SYM_BP (sym));
+          if (stackoffset (sym))
+            emitcode ("add", "a,#!constbyte", stackoffset (sym) & 0xff);
+          emitpush ("acc");
+          emitcode ("clr", "a");
+          emitpush ("acc");
+          emitcode ("mov", "acc, #0x%02x", pointerTypeToGPByte (pointerCode (getSpec (operandType (IC_RESULT (ic)))), 0, 0));
+          emitpush ("acc");
+        }
+      else
+        {
+          emitcode ("mov", "acc, #%s", sym->rname);
+          emitpush ("acc");
+          emitcode ("mov", "acc, #(%s >> 8)", sym->rname);
+          emitpush ("acc");
+          emitcode ("mov", "acc, #0x%02x", pointerTypeToGPByte (pointerCode (getSpec (operandType (IC_RESULT (ic)))), 0, 0));
+          emitpush ("acc");
+        }
+      assignResultGenerated = true;
+    }
 
   if (swapBanks)
     {
@@ -3376,17 +3408,27 @@ genCall (iCode * ic)
         }
     }
 
+  // Adjust stack pointer for the hidden pointer parameter.
+  if (bigreturn)
+    {
+      emitpop (0);
+      emitpop (0);
+      emitpop (0);
+    }
+
   if (swapBanks)
     {
       selectRegBank (FUNC_REGBANK (currFunc->type), IS_BIT (etype));
     }
 
   /* if we need assign a result value */
-  if ((IS_ITEMP (IC_RESULT (ic)) &&
-       !IS_BIT (OP_SYM_ETYPE (IC_RESULT (ic))) &&
-       (OP_SYMBOL (IC_RESULT (ic))->nRegs ||
-        OP_SYMBOL (IC_RESULT (ic))->accuse ||
-        OP_SYMBOL (IC_RESULT (ic))->spildir || IS_BIT (etype))) || IS_TRUE_SYMOP (IC_RESULT (ic)))
+  if (!assignResultGenerated &&
+       ((IS_ITEMP (IC_RESULT (ic)) &&
+         !IS_BIT (OP_SYM_ETYPE (IC_RESULT (ic))) &&
+         (OP_SYMBOL (IC_RESULT (ic))->nRegs ||
+          OP_SYMBOL (IC_RESULT (ic))->accuse ||
+          OP_SYMBOL (IC_RESULT (ic))->spildir || IS_BIT (etype)))
+         || IS_TRUE_SYMOP (IC_RESULT (ic))))
     {
       _G.accInUse++;
       aopOp (IC_RESULT (ic), ic, FALSE);
@@ -3485,6 +3527,8 @@ genPcall (iCode * ic)
   if (IS_FUNCPTR (dtype))
     dtype = dtype->next;
   etype = getSpec (dtype);
+  const bool bigreturn = IS_STRUCT (dtype->next);
+
   /* if caller saves & we have not saved then */
   if (!ic->regsSaved)
     saveRegisters (ic);
@@ -3498,6 +3542,8 @@ genPcall (iCode * ic)
       swapBanks = TRUE;
       // need caution message to user here
     }
+
+  wassertl (!bigreturn, "Unimplemented struct / union return in call via function pointer");
 
   if (IS_LITERAL (etype))
     {
@@ -4577,6 +4623,57 @@ genRet (iCode * ic)
      move the return value into place */
   aopOp (IC_LEFT (ic), ic, FALSE);
   size = AOP_SIZE (IC_LEFT (ic));
+  const bool bigreturn = IS_STRUCT (operandType (IC_LEFT (ic)));
+
+  if (bigreturn)
+    {
+      bool framepointer = (IFFUNC_ISREENT (currFunc->type) || options.stackAuto) && !options.omitFramePtr;
+      asmop *aop = newAsmop (0);
+      reg_info *preg = getFreePtr (ic, aop, false);emitcode (";", "%d", currFunc->stack);
+      if (AOP_TYPE (IC_LEFT (ic)) == AOP_DPTR)
+        for (int i = 0; i < size; i++)
+          {
+            MOVA (aopGet (IC_LEFT (ic), i, false, false));
+            emitpush ("dpl");
+            emitpush ("dph");
+            emitpush ("acc");
+            emitcode ("mov", "a,sp");
+            emitcode ("add", "a,#0x%02x", 0xfc - IFFUNC_ISBANKEDCALL (currFunc->type) - currFunc->stack - framepointer - 3);
+            emitcode ("mov", "%s,a", preg->name);
+            emitcode ("mov", "dpl,@%s", preg->name);
+            emitcode ("inc", "%s", preg->name);
+            emitcode ("mov", "dph,@%s", preg->name);
+            emitcode ("inc", "%s", preg->name);
+            emitcode ("mov", "b,@%s", preg->name);
+            for (int j = 0; j < i; j++)
+              emitcode ("inc", "dptr");
+            emitpop ("acc");
+            emitcode ("lcall", "__gptrput");
+            emitpop ("dph");
+            emitpop ("dpl");
+          }
+      else
+        {
+          emitcode ("mov", "a,sp");
+          emitcode ("add", "a,#0x%02x", 0xfc - IFFUNC_ISBANKEDCALL (currFunc->type) - currFunc->stack - framepointer);
+          emitcode ("mov", "%s,a", preg->name);
+          emitcode ("mov", "dpl,@%s", preg->name);
+          emitcode ("inc", "%s", preg->name);
+          emitcode ("mov", "dph,@%s", preg->name);
+          emitcode ("inc", "%s", preg->name);
+          emitcode ("mov", "b,@%s", preg->name);
+          for (int i = 0; i < size; i++)
+            {
+              MOVA (aopGet (IC_LEFT (ic), i, false, false));
+              emitcode ("lcall", "__gptrput");
+              if (i + 1 < size)
+                emitcode ("inc", "dptr");
+            }
+        }
+      freeAsmop (0, aop, ic, true);
+      goto jumpret;
+    }
+ 
 
   if (IS_BIT (_G.currentFunc->etype))
     {
