@@ -46,7 +46,7 @@ testTortureExecute (void)
   from_input.symflags = 8;
   from_input.marker = 9;
 #if !defined(__SDCC_mcs51) || !defined(__SDCC_STACK_AUTO) // bug?
-#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) // bug?
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_mos6502) // bug?
 #ifndef __SDCC_ds390 // bug?
   t0 (to_input, from_input);
 #endif
