@@ -1,12 +1,13 @@
 /*  Test return of struct / union
 
-    type: int, long
+    type: char, int, long, long long
 
  */
 
 #include <testfwk.h>
 
-#ifndef __SDCC_mcs51 // mcs51 does not yet support returning struct
+#ifndef __SDCC_pdk14 // Lack of memory
+#if !defined(__SDCC_ds390) && !defined(__SDCC_ds390) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_mos6502) // struct return not yet supported
 struct s
 {
 	{type} a;
@@ -58,14 +59,17 @@ int h2(void)
 	return g().a + 1; // Access to member of returned struct
 }
 #endif
+#endif
 
 void testRet (void)
 {
-#ifndef __SDCC_mcs51 // mcs51 does not yet support returning struct
+#if !defined(__SDCC_ds390) && !defined(__SDCC_ds390) && !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_mos6502) // struct return not yet supported
+#ifndef __SDCC_pdk14 // Lack of memory
 	ASSERT (g1() == 3);
 	ASSERT (g2() == 3);
 	ASSERT (h1() == 2);
 	ASSERT (h2() == 2);
+#endif
 #endif
 }
 
